#59 modified footer so that it is aligned correctly for the admin pages

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,3 +77,7 @@
 .sbsp-overview-file-upload {
 border: 1px solid #d0d0d0;
 }
+
+.footer-admin{
+  margin:0 2.3em;
+}
